force-app/main/default/objects/Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QFR_Reports_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>