force-app/main/default/objects/Form__c/fields/Authorised_Person__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Person__c</fullName>
    <description>Record if the declaration signer was an authorised person.</description>
    <label>Is this an authorised person?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>