force-app/main/default/objects/Form__c/fields/Declaration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Complete__c</fullName>
    <label>Is the declaration complete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>