force-app/main/default/objects/Form__c/fields/Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Date__c</fullName>
    <description>The date the declaration was signed.</description>
    <label>Date the document was signed</label>
    <type>Date</type>
</CustomField>