force-app/main/default/objects/Form__c/fields/Declaration_Incomplete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Incomplete_Reason__c</fullName>
    <description>Reason Declaration was incomplete</description>
    <label>Declaration Incomplete Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declaration is a blank document</fullName>
            </value>
            <value>
                <fullName>You must submit an approved Declaration</fullName>
            </value>
            <value>
                <fullName>Declaration is for a prior quarter</fullName>
            </value>
            <value>
                <fullName>A new declaration must be submitted</fullName>
            </value>
            <value>
                <fullName>Signatory is not an authorised person</fullName>
            </value>
            <value>
                <fullName>Signature is missing</fullName>
            </value>
            <value>
                <fullName>Name is missing</fullName>
            </value>
            <value>
                <fullName>Position is missing</fullName>
            </value>
            <value>
                <fullName>Date is missing</fullName>
            </value>
            <value>
                <fullName>Declaration is dated into the future</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>