force-app/main/default/objects/Form__c/fields/Declaration_Signature__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Signature__c</fullName>
    <description>If the declaration has been signed.</description>
    <label>Has the declaration been signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>