force-app/main/default/objects/Form__c/fields/First_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Submission_Date__c</fullName>
    <label>First Submission Date</label>
    <type>Date</type>
</CustomField>