force-app/main/default/objects/Form__c/fields/Form_DM_Key__c.field-meta.xml
<CustomField>
    <fullName>Form_DM_Key__c</fullName>
    <externalId>true</externalId>
    <label>Form DM Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>