force-app/main/default/objects/Form__c/fields/Internal_QA_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_QA_Comment__c</fullName>
    <label>Internal QA Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>