force-app/main/default/objects/Form__c/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <description>Flag to store if the form has been completed or contains errors.</description>
    <label>Is Complete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>