force-app/main/default/objects/Form__c/fields/Latest_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Submission_Date__c</fullName>
    <label>Latest Submission Date</label>
    <type>Date</type>
</CustomField>