force-app/main/default/objects/Form__c/fields/Name_of_Signer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the declaration signatory</description>
    <label>Name of Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>