force-app/main/default/objects/Form__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Reason for Other Declaration incomplete reason</description>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>