force-app/main/default/objects/Form__c/fields/Other_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Other_Signatory__c</fullName>
    <label>Other Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>