force-app/main/default/objects/Form__c/fields/Position_of_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Position_of_Signatory__c</fullName>
    <label>Position of Signatory</label>
    <type>TextArea</type>
</CustomField>