force-app/main/default/objects/Form__c/fields/Provider_Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Integration_Id__c</fullName>
    <formula>Account__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Integration Id</label>
    <type>Text</type>
</CustomField>