force-app/main/default/objects/Form__c/fields/QA_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Comments__c</fullName>
    <inlineHelpText>Please note the provider will see your comment if the QFR is reissued.</inlineHelpText>
    <label>External QA Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>