force-app/main/default/objects/Form__c/fields/Reasonableness_Check_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reasonableness_Check_Reason__c</fullName>
    <description>Refers to the description when Reasonableness Check Outcome is for review</description>
    <label>Reasonableness Check Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>