force-app/main/default/objects/Form__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Period</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipName>QFR_Reports_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>