force-app/main/default/objects/Form__c/fields/ReportOpenDate__c.field-meta.xml
<CustomField>
    <fullName>ReportOpenDate__c</fullName>
    <formula>Reporting_Period__r.Start_Date__c</formula>
    <label>ReportOpenDate</label>
    <type>Date</type>
</CustomField>