force-app/main/default/objects/Form__c/fields/Role_of_Signer__c.field-meta.xml
<CustomField>
    <fullName>Role_of_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position of Signatory</label>
    <referenceTo>Contact_Relationship__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>