force-app/main/default/objects/Form__c/fields/Service_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account Relationship</label>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>QFR_Reports_Storage</relationshipName>
    <type>Lookup</type>
</CustomField>