force-app/main/default/objects/Form__c/fields/Submission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Due_Date__c</fullName>
    <label>Submission Due Date</label>
    <type>Date</type>
</CustomField>