force-app/main/default/objects/Form__c/recordTypes/ACFR.recordType-meta.xml
<RecordType>
    <fullName>ACFR</fullName>
    <active>true</active>
    <label>ACFR</label>
</RecordType>