force-app/main/default/objects/Form__c/recordTypes/QFR.recordType-meta.xml
<RecordType>
    <fullName>QFR</fullName>
    <active>true</active>
    <label>QFR</label>
</RecordType>