force-app/main/default/objects/Form__c/validationRules/Form_modifications_restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_modifications_restrictions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW()
,ISPICKVAL($Profile.UserType,&apos;Standard&apos;)
,OR(ISPICKVAL(Case__r.Status, &apos;New&apos;)
,ISPICKVAL(Case__r.Status, &apos;Draft&apos;)
,ISPICKVAL(Case__r.Status, &apos;Not Required&apos;)
,ISPICKVAL(Case__r.Status, &apos;Closed&apos;))
,Case__r.RecordType.Name=&apos;QFR&apos;
,NOT(ISCHANGED(Is_Complete__c)) 
)</errorConditionFormula>
    <errorMessage>Form can only be modified if Case status is Submitted OR Reissued.</errorMessage>
</ValidationRule>