force-app/main/default/objects/Form__c/validationRules/Other_explanation_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_explanation_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Declaration_Incomplete_Reason__c ),INCLUDES( Declaration_Incomplete_Reason__c ,&quot;Other&quot;), ISBLANK( Other__c ))</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>