force-app/main/default/objects/Form__c/validationRules/QFR_Must_Provide_QA_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>QFR_Must_Provide_QA_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(QA_Outcome__c, &quot;Re-Issue&quot;),
    ISPICKVAL(QA_Outcome__c, &quot;More information required&quot;)
  ),
  ISBLANK(QA_Comments__c),
  ISPICKVAL(Type__c, &quot;Declaration and Submission&quot;)
)</errorConditionFormula>
    <errorDisplayField>QA_Comments__c</errorDisplayField>
    <errorMessage>You must provide additional information for this QA Outcome.</errorMessage>
</ValidationRule>