force-app/main/default/objects/Form__c/validationRules/QFR_Must_Provide_Reasonableness_ResiLabr.validationRule-meta.xml
<ValidationRule>
    <fullName>QFR_Must_Provide_Reasonableness_ResiLabr</fullName>
    <active>true</active>
    <description>Residential Labour Costs and Hours requires reasonableness check to be completed before marking as accepted.</description>
    <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;Residential Labour Costs and Hours&apos;),ISBLANK(TEXT(Reasonableness_Check_Outcome__c)), ISPICKVAL(QA_Outcome__c, &apos;Accepted&apos;))</errorConditionFormula>
    <errorDisplayField>QA_Outcome__c</errorDisplayField>
    <errorMessage>You must complete the reasonableness check before selecting Accepted.</errorMessage>
</ValidationRule>