force-app/main/default/objects/Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>Service_Account_Relationship__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QA_Outcome__c</field>
        <operation>equals</operation>
        <value>Re-Issue</value>
    </filters>
    <label>All</label>
</ListView>